--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,36 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/Home"
-        android:title="Home"
-        android:icon="@drawable/ic_home_black_24dp"
 
-        />
-    <item
-        android:id="@+id/Beginner"
-        android:title="Beginner"
-        android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
+    <item android:id="@+id/General"
+        android:title="General">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/Home"
+                    android:title="Home"
+                    android:icon="@drawable/ic_home_black_24dp"
 
-        />
-    <item
-        android:id="@+id/Moderate"
-        android:title="Moderate"
-        android:icon="@drawable/ic_sentiment_neutral_black_24dp"
+                    />
 
-        />
+                <item
+                    android:id="@+id/Profile"
+                    android:title="Profile"
+                    android:icon="@drawable/ic_perm_identity_yellow_24dp"/>
 
-    <item
-        android:id="@+id/Difficult"
-        android:title="Difficult"
-        android:icon="@drawable/ic_sentiment_dissatisfied_black_24dp"
+            </group>
+        </menu>
+    </item>
 
-        />
-    <item
-        android:id="@+id/Profile"
-        android:title="Profile"
-        android:icon="@drawable/ic_perm_identity_yellow_24dp"/>
-    <item
+
+
+    <item android:id="@+id/Levels"
+        android:title="Levels">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/Beginner"
+                    android:title="Beginner"
+                    android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
+
+                    />
+                <item
+                    android:id="@+id/Moderate"
+                    android:title="Moderate"
+                    android:icon="@drawable/ic_sentiment_neutral_black_24dp"
+
+                    />
+
+                <item
+                    android:id="@+id/Difficult"
+                    android:title="Difficult"
+                    android:icon="@drawable/ic_sentiment_dissatisfied_black_24dp"
+
+                    />
+            </group>
+        </menu>
+    </item>
+
+     <item
         android:id="@+id/Logout"
         android:title="Logout"
         android:icon="@drawable/ic_power_settings_new_black_24dp"/>
