--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+
+    <style name="ThemeToolbar" >
+        <item name="android:listDivider">@color/colorYellow</item>
+        <item name="android:textColorSecondary">@color/colorYellow</item>
     </style>
 
 </resources>
