--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -8,13 +8,10 @@
     android:id="@+id/drawer_layout"
     android:background="@drawable/gradient">
 
-    <fragment
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:defaultNavHost="true"
-        android:id="@+id/fragmentContainer"
-        />
+        android:id="@+id/fragmentContainer"/>
 
 
     <com.google.android.material.navigation.NavigationView
