--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -59,7 +59,7 @@
                     android:layout_width="wrap_content"
                     android:drawableLeft="@drawable/ic_visibility_black_24dp"
                     android:layout_marginLeft="315dp"
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     android:layout_marginTop="408dp"/>
                 <TextView
                     android:id="@+id/notvisible"
