--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -20,6 +20,7 @@
         app:menu="@menu/drawer_menu"
         app:headerLayout="@layout/nav_header"
         android:id="@+id/nv"
+        android:fitsSystemWindows="true"
         android:layout_gravity="start"
         android:background="#000000"
         android:theme="@style/ThemeToolbar"
