onPressed Back Button problem solved for fragments

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -12,7 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragmentContainer"/>
-    
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
+        android:id="@+id/Host_Fragment2"
+        app:navGraph="@navigation/nav_graph2"
+        />
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
