--- a/app/src/main/res/layout/fragment_beginner.xml
+++ b/app/src/main/res/layout/fragment_beginner.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".BeginnerFragment"
+    android:id="@+id/beginnerFragment"
     android:background="@drawable/gradient">
 
 
@@ -92,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:text="Quiz/Test"
                 android:textSize="30dp"
-                android:id="@+id/quizClick"
+                android:id="@+id/quizClick1"
                 android:layout_marginTop="335dp"
                 android:layout_marginLeft="30dp"/>
 
