--- a/app/src/main/res/layout/fragment_difficult.xml
+++ b/app/src/main/res/layout/fragment_difficult.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DifficultFragment"
+    android:id="@+id/difficultFragment"
     android:background="@drawable/gradient">
 
 
@@ -64,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:text="Quiz/Test"
                 android:textSize="30dp"
+                android:id="@+id/quizClick3"
                 android:layout_marginTop="225dp"
                 android:layout_marginLeft="30dp"/>
 
