--- a/app/src/main/res/layout/fragment_quiz_beginner.xml
+++ b/app/src/main/res/layout/fragment_quiz_beginner.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".QuizBeginnerFragment"
+    android:id="@+id/quizBeginnerFragment"
     android:background="@drawable/gradient">
 
 
