--- a/app/src/main/res/layout/fragment_beginner.xml
+++ b/app/src/main/res/layout/fragment_beginner.xml
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Numbers"
+                android:id="@+id/beginnerNumbers"
                 android:textSize="30dp"
                 android:layout_marginTop="120dp"
                 android:layout_marginLeft="30dp"/>
@@ -49,10 +50,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Alphabets"
+                android:text="Days"
+                android:id="@+id/beginnerDays"
                 android:textSize="30dp"
-                android:layout_marginTop="175dp"
+                android:layout_marginTop="170dp"
                 android:layout_marginLeft="30dp"/>
+
 
             <View
                 android:layout_width="500dp"
@@ -63,10 +66,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Days"
+                android:text="Months"
+                android:id="@+id/beginnerMonths"
                 android:textSize="30dp"
                 android:layout_marginTop="225dp"
                 android:layout_marginLeft="30dp"/>
+
 
             <View
                 android:layout_width="500dp"
@@ -77,8 +82,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Months"
+                android:text="Quiz/Test"
                 android:textSize="30dp"
+                android:id="@+id/beginnerQuiz"
                 android:layout_marginTop="280dp"
                 android:layout_marginLeft="30dp"/>
 
@@ -88,20 +94,6 @@
                 android:background="#000000"
                 android:layout_marginTop="330dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Quiz/Test"
-                android:textSize="30dp"
-                android:id="@+id/quizClick1"
-                android:layout_marginTop="335dp"
-                android:layout_marginLeft="30dp"/>
-
-            <View
-                android:layout_width="500dp"
-                android:layout_height="1dp"
-                android:background="#000000"
-                android:layout_marginTop="385dp"/>
 
 
         </RelativeLayout>
