--- a/app/src/main/res/layout/fragment_quiz_score.xml
+++ b/app/src/main/res/layout/fragment_quiz_score.xml
@@ -39,6 +39,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/score_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
