--- a/app/src/main/res/layout/template_greetings.xml
+++ b/app/src/main/res/layout/template_greetings.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/greetingsEnglish"
-        android:layout_width="wrap_content"
+        android:layout_width="123dp"
         android:layout_height="wrap_content"
         android:text="ENGLISH"
         android:layout_marginTop="10dp"
@@ -21,7 +21,7 @@
         android:layout_marginTop="10dp"
         android:textSize="30dp"
         android:textColor="#ffffff"
-        android:layout_marginLeft="190dp"/>
+        android:layout_marginLeft="170dp"/>
 
 
     <TextView
@@ -32,18 +32,18 @@
         android:layout_marginTop="10dp"
         android:textSize="30dp"
         android:textColor="#FFFFFF"
-        android:layout_marginLeft="255dp"/>
+        android:layout_marginLeft="240dp"/>
 
 
     <TextView
         android:id="@+id/greetingsPronounce"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pronounce"
-        android:layout_marginTop="50dp"
+        android:layout_below="@+id/greetingsFrench"
         android:textSize="30dp"
         android:textColor="#FFFFFF"
-        android:gravity="center"
+        android:textAlignment="center"
         android:layout_marginLeft="238dp"/>
 
 
